# pgscan

./: .dir-locals.el  .gitignore  .pre-commit-config.yaml  README.md  example.py  pyproject.toml  requirements.txt  setup.cfg
pgscan/license/: __init__.py  license.py
pygtk-sane/: example.py  pscan.py  scan.py
pygtk-sane/license/: license.py
