# ******************************************************************************
#
# pgscan, Python GTK sane frontend
#
# Copyright 2025 Jeremy A Gray <gray@flyquackswim.com>.
#
# All rights reserved.
#
# SPDX-License-Identifier: GPL-3.0-or-later
#
# ******************************************************************************

[tool]

[tool.black]

line-length = 88
include = '\.pyi?$'
exclude = '''

(
  /(
    \.git
    | \.pytest_cache
    | __pycache__
    | htmlcov
  )/
)
'''

[tool.isort]

ensure_newline_before_comments = true
force_single_line = true
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.pccc]

header_length = 50
body_length = 72
rewrap = true
spell_check = true
repair = false

types = [
  "build",
  "ci",
  "depends",
  "docs",
  "feat",
  "fix",
  "perf",
  "refactor",
  "release",
  "style",
  "test"
]

scopes = [
  "cli",
  "gui",
  "tooling",
]

footers = [
  "github-closes",
  "signed-off-by",
]

required_footers = [
  "signed-off-by"
]

[tool.poetry]

authors = ["Jeremy A Gray <gray@flyquackswim.com>"]
maintainers = ["Jeremy A Gray <gray@flyquackswim.com>"]
description = "GTK and CLI frontend for SANE"
name = "pgscan"
version = "0.0.1"
homepage = "https://github.com/jeremyagray/pgscan"
repository = "https://github.com/jeremyagray/pgscan"


[tool.poetry.dependencies]

Pillow = ">=10,<11"
PyGObject = ">=3,<4"
pycairo = ">=1,<2"
python = ">=3.10.1,<4"
python-sane = ">=2,<3"

[tool.poetry.dev-dependencies]

black = ">=23"
isort = ">=5"
pccc = ">=0"
pre-commit = ">=3"
pytest = ">=8"
pytest-cov = ">=5"
